# xylavo-obsidian-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
obsidian_mcp/: __init__.py  __main__.py  server.py  vault.py
obsidian_mcp/tools/: graph.py  notes.py  search.py  tags.py  templates.py
obsidian_mcp/utils/: frontmatter.py  markdown.py
