[project]
name = "xylavo-obsidian-mcp"
version = "0.1.0"
description = "Obsidian Vault MCP Server - AI 어시스턴트에서 Obsidian Vault를 활용할 수 있는 MCP 서버"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["obsidian_mcp"]
